--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="main.css" />
-    <title>Rotating navigation</title>
+    <title>Animated Input</title>
   </head>
 
   <body>
@@ -18,6 +18,8 @@
       <button class="btn" type="submit">Submit</button>
     </form>
 
-    <script src="main.js"></script>
+    <script>
+      document.querySelector(".input-control input").focus();
+    </script>
   </body>
 </html>
